# preproc-research

./: .gitignore  README.md  app.py  blog.md  frame_selector.py  pyproject.toml  requirements.txt  scene_detector.py  video_processor.py
src/: config.py
utils/: generate_test_videos.py  test_preprocessing.py  visualize_architecture.py
